# dragon-lens

./: .env.example  .gitignore  AGENTS.md  BRAND_EXTRACTION.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  dragonlens.db  dragonlens.db-shm  dragonlens.db-wal  env.example  prompt.md  pyproject.toml
.clinerules/: code_style.md
alembic/: env.py
alembic/versions/: 0001_init.py  0002_prompt_pipeline_constraints.py  0003_comparison_prompts.py  0004_feature_extraction_tables.py  0004_reconcile_postgres_revision.py  0005_extraction_pipeline_knowledge_bootstrap.py  0006_knowledge_tables_to_postgres.py
data/: gold_pairs_chatgpt.csv  knowledge.db  knowledge.db-shm  knowledge.db-wal  prompt_output.json  wikidata_cache.db  wikidata_cache.db-journal
demo_data/: dashboard_snapshot.json
docs/: API_DESIGN.md  COMPLETE_TEST_SUMMARY.md  IMPORT_REFACTORING_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  PIPELINE_FIX_SUMMARY.md  README.md  SMOKE_TEST_SUMMARY.md  TEST_SUMMARY.md  deploy-hetzner.md  deploy-streamlit-community-cloud.md  openapi.json  swagger-sentiment.yaml  swagger.yaml
examples/: diaper_example.json  ev_example.json  hiking_shoes_example.json  skincare_example.json  smartphone_example.json  suv_example.json  suv_example_mini.json
ops/: HETZNER_HANDOFF.md  dragonlens-hetzner-env.example  dragonlens-hetzner-setup.md
ops/hetzner/: Caddyfile  backup.sh  bootstrap.sh  deploy.sh  dragonlens-api.service  dragonlens-backup.service  dragonlens-backup.timer  (+3 more)
results/: hiking_shoes.json
scripts/: add_route_columns.py  benchmark_extraction.py  benchmark_pipeline.py  check_ollama.sh  clear_data.py  create_labeling_sample.py  create_llm_labeling_sample.py  evaluate_extraction.py  export_dashboard_snapshot.py  export_gold_set_csv.py  generate_swagger.py  init_db.py  init_knowledge_db.py  load_wikidata.py  migrate_knowledge_db.py  migrate_knowledge_to_pg.py  prefetch_embedding_model.py  publish_demo_vertical.py  run_example_with_reuse.py  sync_knowledge_vertical.py
src/: __main__.py  config.py
tests/: conftest.py
(+362 files in other folders)
