[tool.poetry]
name = "dragonlens"
version = "0.1.0"
description = "Track brand visibility in Chinese LLMs"
authors = ["DragonLens Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.124.2"
uvicorn = "^0.38.0"
celery = "^5.6.0"
redis = "^7.1.0"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
streamlit = "^1.52.1"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
black = "^25.12.0"
ruff = "^0.14.8"
mypy = "^1.19.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
